edit index file

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -20,7 +20,7 @@
 
   <main>
     <section class="hero-section">
-      <img src="/cat2.jpeg" alt="Fatma Ayman" class="profile-img" />
+      <img src="cat2.jpeg" alt="Fatma Ayman" class="profile-img" />
       <div class="hero-text">
         <h1>Hello, I’m Fatma Ayman</h1>
         <p>A detail-oriented IT student with a passion for web development and data management.</p>
