small edit in contact file

--- a/Portfolio/contact.html
+++ b/Portfolio/contact.html
@@ -32,13 +32,12 @@
         <div class="contact-info">
           <p><strong>Email:</strong> 1fatmayman@gmail.com</p>
           <p><strong>Phone:</strong> 01142555811</p>
-          <p><strong>Location:</strong> Kafr El Zayat, Egypt</p>
           <p><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/fatmayman"
               target="_blank">linkedin.com/in/fatmayman</a></p>
           <p><strong>GitHub:</strong> <a href="https://github.com/fatmayman" target="_blank">github.com/fatmayman</a>
           </p>
         </div>
-      </div>
+      </div>~
     </section>
   </main>
 
