small edit in contact

--- a/Portfolio/contact.html
+++ b/Portfolio/contact.html
@@ -37,7 +37,7 @@
           <p><strong>GitHub:</strong> <a href="https://github.com/fatmayman" target="_blank">github.com/fatmayman</a>
           </p>
         </div>
-      </div>~
+      </div>
     </section>
   </main>
 
