--- a/E-Commerce/index.html
+++ b/E-Commerce/index.html
@@ -91,7 +91,7 @@
   </section>
 
   <footer class="footer">
-    <p>&copy; 2025 TechNest. All rights reserved.</p>
+    <p>&copy; 2025 TechMarts. All rights reserved.</p>
     <div class="socials">
       <a href="#">Facebook</a>
       <a href="#">Twitter</a>
