--- a/Museum-Task/index.html
+++ b/Museum-Task/index.html
@@ -1,1 +1,129 @@
-<!-- msg -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Grand Egyption Museum</title>
+  <link rel="stylesheet" href="index1.css">
+</head>
+
+<body>
+  <nav class="navbar">
+    <div class="logo">
+      <div class="logo-img">
+      </div>
+      <div class="logo-text">GEM</div>
+    </div>
+    <div class="nav-links">
+      <a href="#about">About</a>
+      <a href="#opening">Opening</a>
+      <a href="#collections">Collections</a>
+      <a href="#visit">Visit</a>
+      <a href="#contact">Contact</a>
+    </div>
+  </nav>
+  <section class="hero">
+    <div class="hero-content">
+      <h1>Grand Egyption Museum</h1>
+      <p>The world's largest archaeological museum dedicated to a single civilization,opening its doors to showcase
+        Egypt's magnificent heritage. </p>
+      <a href="#opening" class="btn">Discover More</a>
+    </div>
+  </section>
+
+
+  <section class="opening" id="opening">
+    <h1>Opening Hours</h1>
+    <div class="opening-content">
+      <div class="opening-image"></div>
+
+      <div class="opening-text">
+        <p><strong>Daily except Saturdays and Wednesdays</strong></p>
+        <ul>
+          <li><strong>Museum Complex:</strong> 8:30 AM to 7:00 PM</li>
+          <li><strong>Exhibition Halls:</strong> 9:00 AM to 6:00 PM</li>
+          <li><strong>Last ticket purchase:</strong> 5:00 PM</li>
+        </ul>
+        <p><strong>Saturdays and Wednesdays</strong></p>
+        <ul>
+          <li><strong>Museum Complex:</strong> 8:30 AM to 10:00 PM</li>
+          <li><strong>Exhibition Halls:</strong> 9:00 AM to 9:00 PM</li>
+          <li><strong>Last ticket purchase:</strong> 8:00 PM</li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
+
+  <section class="about" id="about">
+    <h2 class="section-title">A Monument to History</h2>
+    <div class="about-content">
+      <div class="about-text">
+        <p>The Grand Egyptian Museum (GEM), also known as the Giza Museum, will be the largest archaeological museum in
+          the world dedicated to a single civilization. Located just two kilometers from the Giza pyramids, this
+          monumental project has been in development since 2002.</p>
+        <p>Spanning approximately 500,000 square meters, with 92,000 square meters of floor space, GEM will house over
+          100,000 artifacts from Egyptian history, including the complete Tutankhamun collection for the first time.</p>
+        <p>The museum's stunning modern design combines contemporary architecture with ancient Egyptian influences,
+          featuring a translucent stone wall made of alabaster, the same material used in many ancient Egyptian
+          monuments.
+        </p>
+      </div>
+      <div class="about-image"></div>
+    </div>
+  </section>
+
+  <section class="collections" id="collections">
+    <h2 class="section-title">Majestic Collections</h2>
+    <div class="collections-flex">
+      <div class="collection-card">
+        <div class="collection-image image-1 "></div>
+        <div class="collection-info">
+          <h3 class="collection-title">Treasures of Tutankhamun</h3>
+          <p>For the first time, all 5,400 items from King Tut's tomb will be displayed together in their full splendor.
+          </p>
+        </div>
+      </div>
+      <div class="collection-card">
+        <div class="collection-image image-2 "></div>
+        <div class="collection-info">
+          <h3 class="collection-title">Royal Mummies Hall</h3>
+          <p>A dedicated gallery with state-of-the-art climate control will house 22 royal mummies in solemn grandeur.
+          </p>
+        </div>
+      </div>
+      <div class="collection-card">
+        <div class="collection-image image-3 "></div>
+        <div class="collection-info">
+          <h3 class="collection-title">Sun Boat Museum</h3>
+          <p>The spectacular Khufu ship, a 4,600-year-old vessel found at the base of the Great Pyramid, will have its
+            own display area.</p>
+        </div>
+      </div>
+    </div>
+
+    <footer class="footer" id="contact">
+      <div class="footer-logo">
+        <div class="logo-img"></div>
+        <div class="logo-text">GRAND EGYPTIAN MUSEUM</div>
+      </div>
+      <div class="social-icons">
+        <a href="#" class="social-icon">FB</a>
+        <a href="#" class="social-icon">TW</a>
+        <a href="#" class="social-icon">IG</a>
+        <a href="#" class="social-icon">YT</a>
+      </div>
+      <div class="contact-info">
+        <p><strong>Phone:</strong> +20235317344 </p>
+        <p><strong>Email:</strong> <a href="Tourism_info@easwaaqmisr.com">Tourism_info@easwaaqmisr.com </a>
+        </p>
+        <div class="copyright">
+          &copy; 2025 Grand Egyptian Museum. All Rights Reserved.<br>
+          Al Remaya Square, Giza, Egypt
+        </div>
+    </footer>
+
+</body>
+
+</html>
